photo_album_app_on_OCS_OBC-old.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: photo-album
  name: photo-album
spec:
  replicas: 1
  selector:
    app: photo-album
    deploymentconfig: photo-album
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: photo-album
        deploymentconfig: photo-album
    spec:
      containers:
      - image: shouston/python-s3-photo-album
        name: photo-album
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - photo-album
      from:
        kind: ImageStreamTag
        name: photo-album:latest
    type: ImageChange
...
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: photo-album
  name: photo-album
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: photo-album
    deploymentconfig: photo-album
...
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: photo-album
  name: photo-album
spec:
  subdomain: ""
  to:
    kind: Service
    name: photo-album
    weight: 100
  wildcardPolicy: None
...
